sumo/tests/duarouter/routes/style1_input/errors/vehicle_empty_arrivalpos/errors.duarouter
Error: Attribute 'arrivalPos' in definition of a vehicle is empty.
Error: Invalid arrivalPos definition for vehicle '0';
 must be one of ("random", "max", or a float)
Quitting (on error).
